src/objects/wbsendit__Custom_Field__c.object
<CustomObject>
    <description>Maps custom fields from Salesforce to Campaign Monitor</description>
    <fields>
        <fullName>wbsendit__CM_Field__c</fullName>
        <label>CM Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Compound_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Compound Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wbsendit__Conflict_Behaviour__c</fullName>
        <label>Conflict Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce always wins</fullName>
                </value>
                <value>
                    <fullName>Campaign Monitor always wins</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Create_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is true, then don&apos;t update Salesforce Contacts or Leads when syncing from CM to SF. Only use the mapping when creating new Contacts or Leads.</description>
        <label>Create Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wbsendit__Default_Value__c</fullName>
        <description>Default value to use if the Campaign Monitor field is empty. Used when mapping from Campaign Monitor to Salesforce.</description>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__List_Id__c</fullName>
        <label>List Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Object_Type__c</fullName>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CONTACT</fullName>
                </value>
                <value>
                    <fullName>LEAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__SF_Field__c</fullName>
        <label>SF Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Subscriber_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber List</label>
        <referenceTo>wbsendit__Subscriber_List__c</referenceTo>
        <relationshipLabel>Custom Field Mappings</relationshipLabel>
        <relationshipName>Custom_Field_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Sync_Direction__c</fullName>
        <description>Direction this custom mapping syncs between Salesforce and Campaign Monitor.</description>
        <inlineHelpText>Direction this custom mapping syncs between Salesforce and Campaign Monitor.</inlineHelpText>
        <label>Sync Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Don&apos;t sync</fullName>
                </value>
                <value>
                    <fullName>Salesforce to Campaign Monitor</fullName>
                </value>
                <value>
                    <fullName>Campaign Monitor to Salesforce</fullName>
                </value>
                <value>
                    <fullName>Sync both ways</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Custom Field Mapping</label>
    <nameField>
        <label>Sync Direction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>